...
}

// MARK: - BrowserToolbarProtocol
extension URLBarView_V2: BrowserToolbarProtocol {
    var shareButton: UIButton { return _shareButton }
    var bookmarkButton: UIButton { return _bookmarkButton }
    var forwardButton: UIButton { return _forwardButton }
    var backButton: UIButton { return _backButton }
    var stopReloadButton: UIButton { return _stopReloadButton }

    var actionButtons: [UIButton] {
        return [
            self.shareButton,
            self.bookmarkButton,
...
        locationTextField.keyboardType = UIKeyboardType.WebSearch
        locationTextField.autocorrectionType = UITextAutocorrectionType.No
        locationTextField.autocapitalizationType = UITextAutocapitalizationType.None
        locationTextField.returnKeyType = UIReturnKeyType.Go
        locationTextField.clearButtonMode = UITextFieldViewMode.WhileEditing
        locationTextField.font = UIConstants.DefaultChromeFont
        locationTextField.accessibilityIdentifier = "address"
        locationTextField.accessibilityLabel = Strings.ChromeAddressAccessibilityLabel
        return locationTextField
    }()

    lazy var locationView: BrowserLocationView = {
        let locationView = BrowserLocationView()
...
