...
// file, You can obtain one at http://mozilla.org/MPL/2.0/

import Foundation

public struct LinkInfoModel {
    let title: String
    let url: URL
    let accessibilityIdentifier: String

    public init(title: String, url: URL, accessibilityIdentifier: String) {
        self.title = title
        self.url = url
        self.accessibilityIdentifier = accessibilityIdentifier
...
