/* On error page, this is the text on a button that will try to load the page again. */
"NativeErrorPage.ButtonLabel.v131" = "Reload";

/* On certificate error page, this is the text on a button that will show advanced information about the certificate error. */
"NativeErrorPage.BadCertDomain.AdvancedButton.v135" = "Advanced";

/* On certificate error page, this is the advanced information explaining why the certificate is invalid. %1$@ is the app name (e.g. Firefox). %2$@ is the site URL. */
"NativeErrorPage.BadCertDomain.AdvancedInfo.v135" = "%1$@ doesn’t trust this site because the certificate provided isn’t valid for %2$@.";
...
